// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/scroll-wrapper/ScrollWrapper should render children as specified 1`] = `
<ScrollWrapper
  scrollRefFn={[Function]}
  shadowSize="cover"
>
  <div
    className="scroll-container"
  >
    <div
      className="scroll-wrap-container style--cover"
      onScroll={[Function]}
    >
      <p>
        lorem ipsum dolor sit amet
      </p>
    </div>
  </div>
</ScrollWrapper>
`;

exports[`components/scroll-wrapper/ScrollWrapper should render with default properties intact 1`] = `
<div
  className="scroll-container"
>
  <div
    className="scroll-wrap-container style--cover"
    onScroll={[Function]}
  />
</div>
`;

exports[`components/scroll-wrapper/ScrollWrapper should respect custom class names passed in 1`] = `
<div
  className="scroll-container test-classname"
>
  <div
    className="scroll-wrap-container style--cover"
    onScroll={[Function]}
  />
</div>
`;
